# flywheel-gear-extensions

./: .gitignore  BUILD  PR_SPLITTING_STRATEGY.md  mypy.ini  pants.toml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh
.github/workflows/: pants.yml  release-nacc-common.yml
.kiro/agents/: committer.md  release.md  reviewer.md
.kiro/hooks/: jscpd-duplicate-code.kiro.hook  pants-power-reference.kiro.hook  post-task-quality-check.kiro.hook  sync-host-venv.json  sync-host-venv.kiro.hook  tailor-on-file-create.kiro.hook  vulture-dead-code.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: coding-style.md  communication.md  devcontainer.md  kiro-pants-power-reference.md  kiro-pants-power.md  product.md  structure.md  (+5 more)
comanage/: BUILD
docs/: host-venv-for-ide.md  index.md  web-access-authorization-todo.md
nacc-common/: BUILD  README.md  pyproject.toml
nacc-common/src/python/: BUILD  error_data.py
nacc-common/src/python/nacc_common/: data_identification.py  error_data.py  error_models.py  field_names.py  form_dates.py  module_types.py  pipeline.py  qc_report.py  visit_submission_error.py  visit_submission_status.py
nacc-common/test/python/: BUILD  test_error_data.py  test_error_data_ptid_filter.py  test_file_qc_model.py  test_list_submissions.py  test_property_visit_metadata.py  test_submission_qc_summary.py  test_visit_metadata_no_visitnum.py  test_visit_submission_error.py
nacc-common/test/python/nacc_common/: test_error_data.py
prompts/: redcap-suspension-flagging.md
ssm_parameter_store/: README.md
(+1122 files in other folders)
