[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nacc-common"
version = "2.0.0"
description = "NACC Data Platform utilities"
license-files = ["LICENSE"]
authors = [{ name = "NACC", email = "nacchelp@uw.edu" }]
readme = "README.md"
dependencies = ["flywheel-sdk>=20.0.0", "pydantic>=2.5.2"]
requires-python = ">=3.10"
